# Jarvis-Desktop-AI

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.claude/: settings.local.json
.github/workflows/: windows-build.yml
src/: main.cpp
src/app/: Application.cpp  Application.h
src/core/: AIManager.cpp  AIManager.h
src/data/: ConversationManager.cpp  ConversationManager.h
src/integration/ai/: IAIProvider.h  OllamaProvider.cpp  OllamaProvider.h
src/models/: Conversation.cpp  Conversation.h  Message.cpp  Message.h
src/ui/pages/chat/: ChatPage.cpp  ChatPage.h
src/ui/widgets/chatwidgets/: MessageBubble.cpp  MessageBubble.h
src/ui/widgets/sidebar/: SidebarWidget.cpp  SidebarWidget.h
src/ui/windows/mainwindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
